delivery-together-route-api/kubernetes/develop/ingress-dev.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-together-ingress
  labels:
    name: delivery-together-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: delivery-together-route-service
            port: 
              number: 3002
      - pathType: Prefix
        path: /
        backend:
          service:
            name: delivery-together-user-service
            port: 
              number: 3000
